--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" required="required"/></div>
 										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4" required="required"></textarea></div>
 									</div>
-									<p><small>Powered by <a rel="nofollow" href="Un-static Forms">Un-static Forms</a></small></p>
+									<p><small>Powered by <a rel="nofollow" href="https://un-static.com/" target="_blank">Un-static Forms</a></small></p>
 									<ul class="actions">
 										<li><input type="submit" value="Send Message" /></li>
 										<!-- <button type="submit" class="btn btn-primary">Send</button> -->
