--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://claracena.github.io" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/claracena/data-analytics" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/cesar-aracena" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
 					<ul class="copyright">
