--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<!-- One -->
 					<section id="one">
 						<p>
-							I am a process-oriented data analyst with 10+ years of experience with strong communication and interpersonal skills, currently seeking an opportunity to start my career as a remote data analyst.</br>My work has been mostly in real-time data analysis and post-reporting. Below you can find an on-going collection of portfolio jobs that showcase my work.</p>
+							I am a process-oriented data analyst with 10+ years of experience with strong communication and interpersonal skills, currently seeking an opportunity to start my career as a remote data analyst.</p><p>My work has been mostly in real-time data analysis and post-reporting. Below you can find an on-going collection of portfolio jobs that showcase my work.</p>
 						<ul class="actions">
 							<li><a href="javascript:void(0)" class="button" data-toggle="modal" data-target="#about-me-modal">More Info</a></li>
 							<li><a href="files/resume-cesar-aracena.pdf" class="button" download="Resume - Cesar Aracena">Download CV</a></li>
@@ -120,11 +120,9 @@
 					</button>
 					</div>
 					<div class="modal-body">
-						<p style="font-size: 80%;">I have worked in the Oil & Gas industry for over 24 years. The last 10 years+ in the field, I worked in data analysis related jobs by analyzing data both in real time and post-job for internal and external clients. After my last job, I decided to change careers and data analysis is what I love the most.</br>
-						I am also a programmer fluent in several languages and know how to work with SQL quite well but most important, I know how and where to look for resources and assistance in case I face a problem I don't know the solution for.</br>
-						I just finished the Google Data Analytics Professional Certificate and I am starting a course on Python. I am also writing a book to teach Python to people with no or little experience in programming.</br>
-						I am about to start also a certification on Tableau and after I finish the Python course, I will also be doing the IBM Data Analytics Certification in Coursera.</br>
-						It is not easy to change careers at my age (currently 45) specially by aiming to get a job a US company to work remotely from Argentina, but I believe that with the right training and the skills I already have, I will thrive in my new data analytics career.</p>
+						<p style="font-size: 80%;">I have worked in the Oil & Gas industry for over 24 years. The last 10 years+ in the field, I worked in data analysis related jobs by analyzing data both in real time and post-job for internal and external clients. After my last job, I decided to change careers and data analysis is what I love the most. I am also a programmer fluent in several languages and know how to work with SQL quite well but most important, I know how and where to look for resources and assistance in case I face a problem I don't know the solution for.</p>
+						<p style="font-size: 80%;">I just finished the Google Data Analytics Professional Certificate and I am starting a course on Python. I am also writing a book to teach Python to people with no or little experience in programming. I am about to start also a certification on Tableau and after I finish the Python course, I will also be doing the IBM Data Analytics Certification in Coursera.</p>
+						<p style="font-size: 80%;">It is not easy to change careers at my age (currently 45) specially by aiming to get a job a US company to work remotely from Argentina, but I believe that with the right training and the skills I already have, I will thrive in my new data analytics career.</p>
 					</div>
 					<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
