Added Covid Dashboard to Portfolio

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
 								<h3>NC Gaming</h3>
 								<p>Portfolio project for non-existing company</p>
 							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="javascript:void(0)" class="image fit thumb" data-toggle="modal" data-target="#portfolio-modal-3"><img src="images/jobs/thumbnails/covid-dashboard.png" alt="" /></a>
+								<h3>Covid-19 Dashboard</h3>
+								<p>Dashboard showcasing relevant information about Covid-19</p>
+							</article>
 						</div>
 						<div class="row">
 							<h5 class="mx-auto">More to come...</h5>
@@ -145,7 +150,6 @@
 						<p style="font-size: 80%;">This is a fictional company whose story is given to the students of the Google Data Analytics Professional Certificate as one of the three options for a capstone project. The goal is to determine the difference between the two types of users of their service: annual paying members and casual users.</p>
 						<ul class="custom" style="font-size: 80%;">
 							<li>Tools used: SQL, MS Excel</li>
-							<li>Difficulty: Simple</li>
 							<li>Link to PDF report: <a href="files/Cyclistic-Data-Analysis-Report-Cesar-Aracena.pdf" download="Cyclistic Data Analysis Report - Cesar Aracena">Cyclistic Data Analysis Report (PDF)</a></li>
 							<li>Link to PPTX report: <a href="files/Cyclistic-Data-Analysis-Report-Cesar-Aracena.pptx" download="Cyclistic Data Analysis Report - Cesar Aracena">Cyclistic Data Analysis Report (PPTX)</a></li>
 						</ul>
@@ -171,9 +175,32 @@
 						<p style="font-size: 80%;">It is a fictional company that creates mobile games and wants to inaugurate a new department to make games for a platform different from mobile and ask a data analyst to find out which platform and game genre is best suited for the ongoing times.</p>
 						<ul class="custom" style="font-size: 80%;">
 							<li>Tools used: MS Excel</li>
-							<li>Difficulty: Simple</li>
 							<li>Link to PDF report: <a href="files/NC-Gaming-Data-Analysis-Cesar-Aracena.pdf" download="NC Gaming Data Analysis Report - Cesar Aracena">NC Gaming Data Analysis Report (PDF)</a></li>
 							<li>Link to PPTX report: <a href="files/NC-Gaming-Data-Analysis-Cesar-Aracena.pptx" download="NC Gaming Data Analysis Report - Cesar Aracena">NC Gaming Data Analysis Report (PPTX)</a></li>
+						</ul>
+					</div>
+					<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+				</div>
+			</div>
+
+			<!-- Portfolio NC Gaming -->
+			<div class="modal fade bd-example-modal-lg" id="portfolio-modal-3" tabindex="-1" role="dialog" aria-labelledby="Portfolio Modal 3" aria-hidden="true">
+				<div class="modal-dialog modal-lg" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+					<h5 class="modal-title" id="Portfolio Modal 3">Covid-19 Dashboard</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					</div>
+					<div class="modal-body">
+						<p style="font-size: 80%;">Dashboard showcasing relevant information about Covid-19, created using SQL, Excel &amp; Google Data Studio</p>
+						<ul class="custom" style="font-size: 80%;">
+							<li>Tools used: SQL, Excel &amp; Google Data Studio</li>
+							<li>Link to PDF report: <a href="https://datastudio.google.com/u/0/reporting/61a98da2-8cac-4325-a69f-d68dc126168c/page/zL3oC" target="_blank">Covid-19 Report by Cesar Aracena</a></li>
 						</ul>
 					</div>
 					<div class="modal-footer">
