--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 						<p style="font-size: 80%;">Dashboard showcasing relevant information about Covid-19, created using SQL, Excel &amp; Google Data Studio</p>
 						<ul class="custom" style="font-size: 80%;">
 							<li>Tools used: SQL, Excel &amp; Google Data Studio</li>
+							<li>Link to Jupyter Notebook (with details on job performed): <a href="files/Covid-19-Report-Cesar_Aracena.ipynb" download="Covid-19 Jupyter Notebook Report - Cesar Aracena">Covid-19 Jupyter Notebook Report</a></li>
 							<li>Link To Dashboard: <a href="https://datastudio.google.com/u/0/reporting/61a98da2-8cac-4325-a69f-d68dc126168c/page/zL3oC" target="_blank">Covid-19 Report by Cesar Aracena</a></li>
 						</ul>
 					</div>
