--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 						<p style="font-size: 80%;">This is a fictional company whose story is given to the students of the Google Data Analytics Professional Certificate as one of the three options for a capstone project. The goal is to determine the difference between the two types of users of their service: annual paying members and casual users.</p>
 						<ul class="custom" style="font-size: 80%;">
 							<li>Tools used: SQL, MS Excel</li>
-							<li>Link to PDF report: <a href="files/Cyclistic-Data-Analysis-Report-Cesar-Aracena.pdf" download="Cyclistic Data Analysis Report - Cesar Aracena">Cyclistic Data Analysis Report (PDF)</a></li>
-							<li>Link to PPTX report: <a href="files/Cyclistic-Data-Analysis-Report-Cesar-Aracena.pptx" download="Cyclistic Data Analysis Report - Cesar Aracena">Cyclistic Data Analysis Report (PPTX)</a></li>
+							<li>Link to PDF report: <a href="files/Cyclistic-Data-Analysis-Report-Cesar-Aracena.pdf" download="Cyclistic Data Analysis Report - Cesar Aracena.pdf">Cyclistic Data Analysis Report (PDF)</a></li>
+							<li>Link to PPTX report: <a href="files/Cyclistic-Data-Analysis-Report-Cesar-Aracena.pptx" download="Cyclistic Data Analysis Report - Cesar Aracena.pptx">Cyclistic Data Analysis Report (PPTX)</a></li>
 						</ul>
 					</div>
 					<div class="modal-footer">
@@ -175,8 +175,8 @@
 						<p style="font-size: 80%;">It is a fictional company that creates mobile games and wants to inaugurate a new department to make games for a platform different from mobile and ask a data analyst to find out which platform and game genre is best suited for the ongoing times.</p>
 						<ul class="custom" style="font-size: 80%;">
 							<li>Tools used: MS Excel</li>
-							<li>Link to PDF report: <a href="files/NC-Gaming-Data-Analysis-Cesar-Aracena.pdf" download="NC Gaming Data Analysis Report - Cesar Aracena">NC Gaming Data Analysis Report (PDF)</a></li>
-							<li>Link to PPTX report: <a href="files/NC-Gaming-Data-Analysis-Cesar-Aracena.pptx" download="NC Gaming Data Analysis Report - Cesar Aracena">NC Gaming Data Analysis Report (PPTX)</a></li>
+							<li>Link to PDF report: <a href="files/NC-Gaming-Data-Analysis-Cesar-Aracena.pdf" download="NC Gaming Data Analysis Report - Cesar Aracena.pdf">NC Gaming Data Analysis Report (PDF)</a></li>
+							<li>Link to PPTX report: <a href="files/NC-Gaming-Data-Analysis-Cesar-Aracena.pptx" download="NC Gaming Data Analysis Report - Cesar Aracena.pptx">NC Gaming Data Analysis Report (PPTX)</a></li>
 						</ul>
 					</div>
 					<div class="modal-footer">
@@ -200,7 +200,7 @@
 						<p style="font-size: 80%;">Dashboard showcasing relevant information about Covid-19, created using SQL, Excel &amp; Google Data Studio</p>
 						<ul class="custom" style="font-size: 80%;">
 							<li>Tools used: SQL, Excel &amp; Google Data Studio</li>
-							<li>Link to Jupyter Notebook (with details on job performed): <a href="files/Covid-19-Report-Cesar_Aracena.ipynb" download="Covid-19 Jupyter Notebook Report - Cesar Aracena">Covid-19 Jupyter Notebook Report</a></li>
+							<li>Link to Jupyter Notebook (with details on job performed): <a href="files/Covid-19-Report-Cesar_Aracena.ipynb" download="Covid-19 Jupyter Notebook Report - Cesar Aracena.ipynb">Covid-19 Jupyter Notebook Report</a></li>
 							<li>Link To Dashboard: <a href="https://datastudio.google.com/u/0/reporting/61a98da2-8cac-4325-a69f-d68dc126168c/page/zL3oC" target="_blank">Covid-19 Report by Cesar Aracena</a></li>
 						</ul>
 					</div>
